--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "@atom/teletype-crdt",
   "version": "0.9.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "babel lib -d dist --ignore __tests__,__stories__,__mocks__ --copy-files",
     "test": "node script/test",
     "compile-protobuf": "protoc --js_out=import_style=commonjs,binary:lib teletype-crdt.proto"
   },
@@ -21,7 +22,21 @@
     "random-seed": "^0.3.0",
     "yargs": "^8.0.1"
   },
+  "babel": {
+    "plugins": [
+      "transform-runtime"
+    ],
+    "presets": [
+      "flow",
+      "es2015"
+    ]
+  },
   "dependencies": {
+    "babel-cli": "^6.23.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.22.0",
     "google-protobuf": "^3.3.0"
   }
 }
